--- a/lecture_notes/lecture_note_bib.bib
+++ b/lecture_notes/lecture_note_bib.bib
@@ -1,3 +1,13 @@
+@article{black1982trouble,
+  title     = {The trouble with econometric models},
+  author    = {Black, Fischer},
+  journal   = {Financial Analysts Journal},
+  volume    = {38},
+  number    = {2},
+  pages     = {29--37},
+  year      = {1982},
+  publisher = {Taylor \& Francis}
+}
 @article{lewbel2019identification,
   title     = {The identification zoo: Meanings of identification in econometrics},
   author    = {Lewbel, Arthur},
@@ -7,4 +17,209 @@
   pages     = {835--903},
   year      = {2019},
   publisher = {American Economic Association 2014 Broadway, Suite 305, Nashville, TN 37203-2425}
+}
+@book{blair2023research,
+  title     = {Research Design in the Social Sciences: Declaration, Diagnosis, and Redesign},
+  author    = {Blair, Graeme and Coppock, Alexander and Humphreys, Macartan},
+  year      = {2023},
+  publisher = {Princeton University Press}
+}
+@article{lalonde1986evaluating,
+  title   = {Evaluating the econometric evaluations of training programs with experimental data},
+  author  = {LaLonde, Robert J},
+  journal = {The American Economic Review},
+  pages   = {604--620},
+  year    = {1986}
+}
+
+@article{robins1992estimating,
+  title   = {Estimating exposure effects by modelling the expectation of exposure conditional on confounders},
+  author  = {Robins, James M and Mark, Steven D and Newey, Whitney K},
+  journal = {Biometrics},
+  pages   = {479--495},
+  year    = {1992}
+}
+
+
+@article{freedman1987equipoise,
+  title   = {Equipoise and the ethics of clinical research.},
+  author  = {Freedman, B},
+  journal = {The New England Journal of Medicine},
+  volume  = {317},
+  number  = {3},
+  pages   = {141--145},
+  year    = {1987}
+}
+@article{leamer1983let,
+  title     = {Let's take the con out of econometrics},
+  author    = {Leamer, Edward E},
+  journal   = {The American Economic Review},
+  volume    = {73},
+  number    = {1},
+  pages     = {31--43},
+  year      = {1983},
+  publisher = {JSTOR}
+}
+
+@book{pearl2009causality,
+  title     = {Causality},
+  author    = {Pearl, Judea},
+  year      = {2009},
+  publisher = {Cambridge university press}
+}
+
+@article{imbens2020potential,
+  title     = {Potential outcome and directed acyclic graph approaches to causality: Relevance for empirical practice in economics},
+  author    = {Imbens, Guido W},
+  journal   = {Journal of Economic Literature},
+  volume    = {58},
+  number    = {4},
+  pages     = {1129--1179},
+  year      = {2020},
+  publisher = {American Economic Association 2014 Broadway, Suite 305, Nashville, TN 37203-2425}
+}
+
+@book{imbens2015causal,
+  title     = {Causal inference in statistics, social, and biomedical sciences},
+  author    = {Imbens, Guido W and Rubin, Donald B},
+  year      = {2015},
+  publisher = {Cambridge University Press}
+}
+@article{imbens2004nonparametric,
+  title     = {Nonparametric estimation of average treatment effects under exogeneity: A review},
+  author    = {Imbens, Guido W},
+  journal   = {Review of Economics and statistics},
+  volume    = {86},
+  number    = {1},
+  pages     = {4--29},
+  year      = {2004},
+  publisher = {MIT Press 238 Main St., Suite 500, Cambridge, MA 02142-1046, USA journals~…}
+}
+@article{krueger1999experimental,
+  title     = {Experimental estimates of education production functions},
+  author    = {Krueger, Alan B},
+  journal   = {The quarterly journal of economics},
+  volume    = {114},
+  number    = {2},
+  pages     = {497--532},
+  year      = {1999},
+  publisher = {MIT Press}
+}
+
+@article{heckman2010building,
+  title     = {Building bridges between structural and program evaluation approaches to evaluating policy},
+  author    = {Heckman, James J},
+  journal   = {Journal of Economic literature},
+  volume    = {48},
+  number    = {2},
+  pages     = {356--398},
+  year      = {2010},
+  publisher = {American Economic Association}
+}
+@article{deaton2010instruments,
+  title     = {Instruments, randomization, and learning about development},
+  author    = {Deaton, Angus},
+  journal   = {Journal of economic literature},
+  volume    = {48},
+  number    = {2},
+  pages     = {424--455},
+  year      = {2010},
+  publisher = {American Economic Association}
+}
+@article{chang2023design,
+  title   = {Design-based Estimation Theory for Complex Experiments},
+  author  = {Chang, Haoge},
+  journal = {arXiv preprint arXiv:2311.06891},
+  year    = {2023}
+}
+@article{imbens2016robust,
+  title     = {Robust standard errors in small samples: Some practical advice},
+  author    = {Imbens, Guido W and Kolesar, Michal},
+  journal   = {Review of Economics and Statistics},
+  volume    = {98},
+  number    = {4},
+  pages     = {701--712},
+  year      = {2016},
+  publisher = {The MIT Press}
+}
+
+@article{baicker2013oregon,
+  title     = {The Oregon experiment—effects of Medicaid on clinical outcomes},
+  author    = {Baicker, Katherine and Taubman, Sarah L and Allen, Heidi L and Bernstein, Mira and Gruber, Jonathan H and Newhouse, Joseph P and Schneider, Eric C and Wright, Bill J and Zaslavsky, Alan M and Finkelstein, Amy N},
+  journal   = {New England Journal of Medicine},
+  volume    = {368},
+  number    = {18},
+  pages     = {1713--1722},
+  year      = {2013},
+  publisher = {Mass Medical Soc}
+}
+@article{bettinger2012role,
+  title     = {The role of application assistance and information in college decisions: Results from the H\&R Block FAFSA experiment},
+  author    = {Bettinger, Eric P and Long, Bridget Terry and Oreopoulos, Philip and Sanbonmatsu, Lisa},
+  journal   = {The Quarterly Journal of Economics},
+  volume    = {127},
+  number    = {3},
+  pages     = {1205--1242},
+  year      = {2012},
+  publisher = {MIT Press}
+}
+@book{aronow2019foundations,
+  title     = {Foundations of agnostic statistics},
+  author    = {Aronow, Peter M and Miller, Benjamin T},
+  year      = {2019},
+  publisher = {Cambridge University Press}
+}
+@article{holland1986statistics,
+  title     = {Statistics and causal inference},
+  author    = {Holland, Paul W},
+  journal   = {Journal of the American statistical Association},
+  volume    = {81},
+  number    = {396},
+  pages     = {945--960},
+  year      = {1986},
+  publisher = {Taylor \& Francis}
+}
+@article{neyman1990,
+  issn      = {08834237},
+  url       = {http://www.jstor.org/stable/2245382},
+  abstract  = {In the portion of the paper translated here, Neyman introduces a model for the analysis of field experiments conducted for the purpose of comparing a number of crop varieties, which makes use of a double-indexed array of unknown potential yields, one index corresponding to varieties and the other to plots. The yield corresponding to only one variety will be observed on any given plot, but through an urn model embodying sampling without replacement from this doubly indexed array, Neyman obtains a formula for the variance of the difference between the averages of the observed yields of two varieties. This variance involves the variance over all plots of the potential yields and the correlation coefficient r between the potential yields of the two varieties on the same plot. Since it is impossible to estimate r directly, Neyman advises taking r = 1, observing that in practice this may lead to using too large an estimated standard deviation, when comparing two variety means.},
+  author    = {Jerzy Splawa-Neyman and D. M. Dabrowska and T. P. Speed},
+  journal   = {Statistical Science},
+  number    = {4},
+  pages     = {465--472},
+  publisher = {Institute of Mathematical Statistics},
+  title     = {On the Application of Probability Theory to Agricultural Experiments. Essay on Principles. Section 9.},
+  urldate   = {2023-12-11},
+  volume    = {5},
+  year      = {1990}
+}
+@article{katz2001moving,
+  title     = {Moving to opportunity in Boston: Early results of a randomized mobility experiment},
+  author    = {Katz, Lawrence F and Kling, Jeffrey R and Liebman, Jeffrey B},
+  journal   = {The quarterly journal of economics},
+  volume    = {116},
+  number    = {2},
+  pages     = {607--654},
+  year      = {2001},
+  publisher = {MIT Press}
+}
+@article{parker2017conditional,
+  title     = {Conditional cash transfers: The case of Progresa/Oportunidades},
+  author    = {Parker, Susan W and Todd, Petra E},
+  journal   = {Journal of Economic Literature},
+  volume    = {55},
+  number    = {3},
+  pages     = {866--915},
+  year      = {2017},
+  publisher = {American Economic Association 2014 Broadway, Suite 305, Nashville, TN 37203-2425}
+}
+@article{angrist2010credibility,
+  title     = {The credibility revolution in empirical economics: How better research design is taking the con out of econometrics},
+  author    = {Angrist, Joshua D and Pischke, J{\"o}rn-Steffen},
+  journal   = {Journal of economic perspectives},
+  volume    = {24},
+  number    = {2},
+  pages     = {3--30},
+  year      = {2010},
+  publisher = {American Economic Association}
 }
