--- a/lectures/00_intro.tex
+++ b/lectures/00_intro.tex
@@ -180,10 +180,10 @@
 \begin{columns}[T] % align columns
 \begin{column}{.7\textwidth}
   \begin{wideitemize}
-  \item This class is targetted towards researchers interested in empirical work
-  \item The course assumes quite a bit of exposure to econometrics material already
+  \item This class is targeted towards researchers interested in empirical work
+  \item The course assumes exposure to Ph.D.-level econometrics material already
     \begin{itemize}
-    \item I assume the first year sequence here at Yale
+    \item E.g. first year sequence here at Yale
     \end{itemize}
   \item This is not because the material is deeply technical, but
     because I want to be able to assume some basic fluency in
@@ -211,8 +211,7 @@
     \begin{itemize}
     \item See syllabus for details
     \end{itemize}
-  \item There are no required readings, but the papers listed in the
-    syllabus are relevant to the material we will cover in class.
+  \item There are no required readings, but the papers listed in the    syllabus are relevant to the material we will cover in class. I will post lecture notes before class on the material along with the class slides.
   \item I also highly recommend the following texts:
     \begin{itemize}
     \item Angrist and  Pischke, Mostly Harmless Econometrics
