--- a/lecture_notes/01_po_dags_notes.tex
+++ b/lecture_notes/01_po_dags_notes.tex
@@ -543,7 +543,16 @@ It is quite helpful to see how this maps back to the potential outcome framework
   &= \underbrace{E(Y_{i}(0) | D_{i} = 0)}_{\alpha} + \underbrace{\tau}_{\beta} D_{i} + \underbrace{(\tau_{i} - \tau)D_{i} + (Y_{i}(0)-E(Y_{i}(0) | D_{i} = 0))}_{\varepsilon_{i}}
 \end{align*}
 
-This is a special case where the coefficient $\beta$ in the linear regression case will give the average treatment effect, the constant will give the average for the untreated, and the error term will capture the rest. An interesting thing to notice is that under heterogeneity, this regression must have heteroskedasticity. 
+Consider now what $E(Y_{i} | D_{i})$ will recover:
+\begin{align*}
+  E(Y_{i} | D_{i} = 1) &= \alpha + \tau + E(\varepsilon_{i} | D_{i} = 1)\\
+  E(\varepsilon_{i} | D_{i} = 1) &= (E(\tau_{i} | D_{i}=1) - \tau)  + E(Y_{i}(0) | D_{i} = 1) -  E(Y_{i}(0) | D_{i} = 0)\\
+  E(Y_{i} | D_{i} = 0) &= \alpha + E(\varepsilon_{i} | D_{i} = 1)\\
+  E(\varepsilon_{i} | D_{i} = 0) &= 0.
+\end{align*}
+So, we can see that we will recover the average treatment effect as $\beta$ if $D_{i}$ is randomly assigned (or strongly ignorable).  This is a special case where the coefficient $\beta$ in the linear regression case will give the average treatment effect, the constant will give the average for the untreated, and the error term will capture the rest. We will suffer from omitted variable bias if $ E(Y_{i}(0) | D_{i} = 1) -  E(Y_{i}(0) | D_{i} = 0) \neq 0$ -- e.g. if there is selection into treatment based on your control potential outcome. Notice that if $E(\tau_{i} | D_{i} =1) \not=\tau$, then we will also not estimate the ATE, but we will estimate the ATT.
+
+%An interesting thing to notice is that under heterogeneity, this regression must have heteroskedasticity. 
 
 More generally, however, it's just useful to see that there are one-to-one mappings between the potential outcome framework and structural regressions. In many ways, the potential outcome framework is helpful because it emphasizes the relevant counterfactual state more than many linear models. 
 
