--- a/lecture_notes/02_randomization_notes.tex
+++ b/lecture_notes/02_randomization_notes.tex
@@ -261,9 +261,9 @@ Second, it forces you to articulate \emph{how} you are going to estimate the cou
     \begin{itemize}
       \item Model-based: the estimand is
             identified using assumptions on the modeling of the potential outcomes conditional on treatment and additional variables
-            (e.g. parallel trends). Examples of approaches that can fall under this category include difference-in-differences, regression discontinuity, synthetic control (and synthetic diff-in-diff), and instrumental variable approaches that use ``included'' instruments.
+            (e.g. parallel trends). Examples of approaches that can fall under this category include difference-in-differences (including non-random staggerred diff-in-diff), regression discontinuity, synthetic control (and synthetic diff-in-diff), and instrumental variable approaches that use ``included'' instruments.
       \item Design-based: the estimand is identified using assumptions on the treatment variable,
-            conditional on the potential outcomes and additional variables. Examples include randomized control trials, instrumental variable approaches that use ``excluded'' instruments, difference-in-difference with staggered random timing, and propensity score matching.
+            conditional on the potential outcomes and additional variables. Examples include randomized control trials, instrumental variable approaches that use ``excluded'' instruments, difference-in-difference with \emph{random} staggered timing, and propensity score matching.
     \end{itemize}
     See \href{https://twitter.com/lihua_lei_stat/status/1479700463343714306?s=20&t=pKi-XTp3e89Rn8KV8b3KEA}{Lihua Lei's very nice twitter thread} for a small history on why these terms acquired their labels.
   \end{cmt}
