--- a/lectures/02_randomization.tex
+++ b/lectures/02_randomization.tex
@@ -179,15 +179,14 @@
 \end{frame}
 
 \begin{frame}{Outline on Randomization}
-  Goal of today's class
-  \begin{itemize}
-  \item Discuss debates in value of randomization
-    \begin{itemize}
-    \item Historical
-    \item Current
+  \begin{wideitemize}
+    \item Discuss the value of randomized interventions, and identifying settings where interventions are ``as-if'' randomly assigned
+   \begin{itemize}
+     \item Touch on the historical and (somewhat) current views on this
     \end{itemize}
-  \item ``Research Design'' and Design-based vs. model-based inference 
-  \end{itemize}
+  \item Define a ``research design.''
+  \item Give an introduction to design-based vs. model-based identification and causal inference.
+\end{wideitemize}
 \end{frame}
 
 
@@ -409,10 +408,7 @@
          variables
       \end{itemize}
 
-    \item See Lihua Lei's very nice Twitter discussion of the
-      \underline{\href{https://twitter.com/lihua_lei_stat/status/1479700463343714306?s=20&t=pKi-XTp3e89Rn8KV8b3KEA}{history
-          of Model vs. Design-based nomenclature from the survey
-          literature}}
+      \item They are different \emph{assumptions} to allow for credible estimates
     \end{wideitemize}
 \end{column}%
 \hfill%
@@ -426,7 +422,7 @@
 \begin{columns}[T] % align columns
   \begin{column}{.7\textwidth}
     \begin{wideitemize}
-    \item For today, we'll assume we have a randomized intervention
+    \item For today, we'll assume we have a randomized intervention: an example of a design-based approach
       \begin{itemize}
       \item Ignore compliance
       \item Ignore ``quasi-experimental'' vagaries
